--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -29,6 +29,6 @@
     }
 </style>
 <nav>
-    <a href="{{site.link}}" id="nav-icon">Ary Dev</a>
-    <a href="{{site.link}}/about" id="nav-about">About</a>
+    <a href="{{site.url}}/" id="nav-icon">Ary Dev</a>
+    <a href="{{site.url}}/about" id="nav-about">About</a>
 </nav>
