making post list text only, no image

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -24,6 +24,7 @@
         height: 25vh;
         display: flex;
         align-items: center;
+        user-select: none;
         justify-content: space-between;
         flex-direction: column;
     }
