--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -16,19 +16,20 @@
         justify-content: space-between;
         align-items: center;
         box-shadow: 0 1px 5px 0px hsl(60, 100%, 25%);
+        user-select: none;
     }
-    a{
+    .nav-link{
         color:black;
         text-decoration: none;
         transition: 0.2s;
     }
-    a:hover{
+    .nav-link:hover{
         text-decoration: underline;
         color:hsl(0, 0%, 25%);
         /* transform: translate(0px,0px); */
     }
 </style>
 <nav>
-    <a href="{{site.url}}/" id="nav-icon">Ary Dev</a>
-    <a href="{{site.url}}/about" id="nav-about">About</a>
+    <a href="{{site.url}}/" class="nav-link">Ary Dev</a>
+    <a href="{{site.url}}/about" class="nav-link">About</a>
 </nav>
