--- a/_layouts/article.html
+++ b/_layouts/article.html
@@ -45,7 +45,11 @@
         margin: 0 0.5rem;
         padding: 0.2em;
         box-shadow: -3px 5px 4px 0px #FFFF70;
+        user-select: none;
         
+    }
+    *::selection {
+        background: #ffff70; /* WebKit/Blink Browsers */
     }
 
 </style>
